Bug 424321 - "Find transaction" does not respect filter
Summary: "Find transaction" does not respect filter
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-17 09:23 UTC by antoine
Modified: 2020-07-26 07:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
demo (1.01 MB, image/gif)
2020-07-17 09:23 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2020-07-17 09:23:16 UTC
Created attachment 130195 [details]
demo

SUMMARY


STEPS TO REPRODUCE
1. Edit > Find transactions
2. Set your filter on a category
3. Click find

OBSERVED RESULT

Transactions found does not respect the filter


SOFTWARE/OS VERSIONS
xubuntu 20.04
Comment 1 Jack 2020-07-18 22:48:45 UTC
I seem to be getting apparently inconsistent results.  With "Current year" and all other filters at default, I get 2469 matching transactions.  If I select no categories, I get 303.  If I add one category, I get over 1500, and many of these do NOT have that category.  As I add categories, I get more transactions, but not necessarily ones using those categories.  So it looks like category is having some effect on the search, but not as expected.

Additional oddity - selecting zero or one category, the dialog displays the warning that filtering by category will eliminate transfers from the results, but I do have at least one transfer in the matching transactions.
Comment 2 Thomas Baumgart 2020-07-26 07:32:11 UTC
Git commit 56cb798b54e48fca819380e18d9ac5b9b1ab01c7 by Thomas Baumgart.
Committed on 26/07/2020 at 07:30.
Pushed by tbaumgart into branch 'master'.

Include category filter in all cases

In some cases, a provided category filter was ignored which caused no
filtering at all.
FIXED-IN: 5.1.1
(cherry picked from commit 910bc921d824e30ee3347bd465a21c7ad6c446cc)

M  +17   -8    kmymoney/mymoney/mymoneytransactionfilter.cpp

https://invent.kde.org/office/kmymoney/commit/56cb798b54e48fca819380e18d9ac5b9b1ab01c7
Comment 3 Thomas Baumgart 2020-07-26 07:32:27 UTC
Git commit 910bc921d824e30ee3347bd465a21c7ad6c446cc by Thomas Baumgart.
Committed on 25/07/2020 at 17:16.
Pushed by tbaumgart into branch '5.1'.

Include category filter in all cases

In some cases, a provided category filter was ignored which caused no
filtering at all.
FIXED-IN: 5.1.1

M  +17   -8    kmymoney/mymoney/mymoneytransactionfilter.cpp

https://invent.kde.org/office/kmymoney/commit/910bc921d824e30ee3347bd465a21c7ad6c446cc