Include category filter in all cases

In some cases, a provided category filter was ignored which caused no
filtering at all.

BUG: 424321
FIXED-IN: 5.1.1